<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue_600"
        android:theme="@style/ThemeOverlay.NodesMainMenu.FullscreenContainer"
        tools:context=".nodes.NotesGroup">

        <!-- The primary full-screen view. This can be replaced with whatever view
             is needed to present your content, e.g. VideoView, SurfaceView,
             TextureView, etc. -->

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/dummy_content"
            android:textColor="?attr/fullscreenTextColor"
            android:textSize="50sp"
            android:textStyle="bold" />

        <!-- This FrameLayout insets its children based on system windows using
             android:fitsSystemWindows. -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                style="@style/Widget.Theme.NodesMainMenu.ButtonBar.Fullscreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/dummy_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dummy_button" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/add"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="createNewNode"
                    android:text="@string/plus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="#3A0505"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ExtraText,SpeakableTextPresentCheck">>

                    <LinearLayout
                        android:id="@+id/linearlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#3A0505"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

                </ScrollView>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:onClick="OpenGroup"
                    android:text="@string/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>