<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:backgroundTint="#321E1E"
    android:theme="@style/ThemeOverlay.NodesMainMenu.FullscreenContainer"
    tools:context=".nodes.FullscreenActivitySingle">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.NodesMainMenu.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A54405">

            <Button
                android:id="@+id/button3"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:onClick="OpenMain"
                android:text="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/add"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="createNewNode"
                android:text="@string/question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="284dp"
                android:layout_height="72dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="183dp"
                android:layout_marginEnd="96dp"
                android:autoSizeMinTextSize="200dp"
                android:checked="false"
                android:ellipsize="start"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="Голосовое управление"
                android:textColor="#C3B9B9"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</FrameLayout>